--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="FW.css" />
     <style type="text/css">
-        h2{color: #0D1C41;text-align: left;margin-top:30px;margin-bottom:0px;}
+        html {
+   font-family: Arial, sans-serif
+}
+h2{color: #0D1C41;text-align: left;margin-top:30px;margin-bottom:0px;}
 h1{color: #0D1C41;text-align: left;margin-top:30px;margin-bottom:0px;font-weight:bolder;font-size: 3em;}
 p{color: #0D1C41;text-align: left;font-size: 1.1em;}
 .container {
@@ -130,13 +133,15 @@ img  {
   
   .gallery img {
     padding:10%;
+    
   } 
   .desc {
     display:flex;
     text-align: center;
     justify-content: center;
     flex-wrap: wrap;
-    padding-bottom:10px;
+    padding:15px 15px;
+    height:90px;
   }
   .footer {
     background-color:rgb(74, 96, 122, 1);
@@ -165,8 +170,8 @@ img  {
     text-decoration: none;
     display: inline-block;
     cursor: pointer;
-    margin-top:30px;
-    margin-bottom:30px;
+    margin-top:20px;
+    margin-bottom:20px;
   }
   .f a{
     color:white;
@@ -178,7 +183,16 @@ img  {
   .f p{
     color:rgba(221, 208, 164, 1);
   }
-  @media screen and (max-width: 700px) {
+ 
+  @media screen and (max-width: 865px) {
+    .footer{
+      flex-wrap:wrap;
+     }
+    .top-nav-menu {   
+      font-size: 1.1em;
+      width:100%;
+      flex-direction: column;
+    }
     .top-nav-menu {   
       font-size: 1.1em;
       width:100%;
@@ -197,10 +211,12 @@ img  {
       height:auto;
       font-size: 0.9;
       padding-bottom: 50px;
+      flex-direction: column;
     }
     .r{
       border-radius:30px;
       border-color:rgb(243, 241, 241);
+      padding-bottom:5px ;
       box-shadow: 0 0px 4px 3px rgba(181, 181, 181, 0.24),0 0px 4px 4px rgba(100, 100, 100, 0.19)
     }
     .content{
@@ -215,21 +231,18 @@ img  {
       width:60%;
       margin-bottom:30px;
     }
-    .footer{
-     flex-wrap:wrap;
-    }
-  }
-  @media screen and (max-width: 865px) {
-    .top-nav-menu {   
-      font-size: 1.1em;
-      width:100%;
-      flex-direction: column;
-    }
     h1{
       text-align: center;
     }
+    .f{
+      margin-bottom:0px;
+      padding-top:20px;
+    }
     h2{
       text-align: center;
+    }
+    .desc{
+      display:none;
     }
   }
     </style>
