--- a/index.html
+++ b/index.html
@@ -356,26 +356,26 @@ img  {
                <a target="_blank" href="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b0/NewTux.svg/1200px-NewTux.svg.png">
                  <img src="https://cdn-icons-png.flaticon.com/512/1024/1024759.png" alt="Northern Lights" width="600" height="400">
                </a>
-               <div class="desc">Lorem ipsum dolor sit </div>
+               <div class="desc">Lorem ipsuLorem ipsumm dolor sit </div>
              </div>
              
              <div class="gallery">
                <a target="_blank" href="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b0/NewTux.svg/1200px-NewTux.svg.png">
                  <img src="https://cdn-icons-png.flaticon.com/512/1024/1024759.png" alt="Mountains" width="600" height="400">
                </a>
-               <div class="desc">Lorem ipsum dolor sit </div>
+               <div class="desc">Lorem ipsum Lorem ipsumLorem ipsumdolor sit </div>
              </div>
              <div class="gallery">
                <a target="_blank" href="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b0/NewTux.svg/1200px-NewTux.svg.png">
                  <img src="https://cdn-icons-png.flaticon.com/512/1024/1024759.png" alt="Mountains" width="600" height="400">
                </a>
-               <div class="desc">Lorem ipsum dolor sit </div>
+               <div class="desc">Lorem ipsum dolor Lorem ipsumsit </div>
              </div>
              <div class="gallery">
               <a target="_blank" href="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b0/NewTux.svg/1200px-NewTux.svg.png">
                 <img src="https://cdn-icons-png.flaticon.com/512/1024/1024759.png" alt="Mountains" width="600" height="400">
               </a>
-              <div class="desc">Lorem ipsum dolor sit </div>
+              <div class="desc">Lorem ipsumLorem ipsum dolor sit </div>
             </div>
            </div>
        </div>
