--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    font-family: Arial, sans-serif
 }
 h2{color: #0D1C41;text-align: left;margin-top:30px;margin-bottom:0px;}
-h1{color: #0D1C41;text-align: left;margin-top:30px;margin-bottom:0px;font-weight:bolder;font-size: 3em;}
+h1{color: #0D1C41;text-align: left;margin-top:30px;margin-bottom:15px;font-weight:bolder;font-size: 3em;}
 p{color: #0D1C41;text-align: left;font-size: 1.1em;}
 .container {
     margin: 0;
@@ -133,6 +133,7 @@ img  {
   
   .gallery img {
     padding:10%;
+    max-height:300px;
     
   } 
   .desc {
@@ -241,10 +242,9 @@ img  {
     h2{
       text-align: center;
     }
-    .desc{
-      display:none;
-    }
+    
   }
+
     </style>
     <title>Document</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
