--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="FW.css" />
     <title>Document</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
   <div class="top-nav-menu">
@@ -113,9 +114,15 @@
                <a target="_blank" href="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b0/NewTux.svg/1200px-NewTux.svg.png">
                  <img src="https://cdn-icons-png.flaticon.com/512/1024/1024759.png" alt="Northern Lights" width="600" height="400">
                </a>
-               <div class="desc">Lorem ipsuLorem ipsumm dolor sit </div>
+               <div class="desc">Lorem ipsum Lorem ipsumdolor sit </div>
              </div>
              
+             <div class="gallery">
+               <a target="_blank" href="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b0/NewTux.svg/1200px-NewTux.svg.png">
+                 <img src="https://cdn-icons-png.flaticon.com/512/1024/1024759.png" alt="Mountains" width="600" height="400">
+               </a>
+               <div class="desc">Lorem ipsum Lorem ipsumdolor sit </div>
+             </div>
              <div class="gallery">
                <a target="_blank" href="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b0/NewTux.svg/1200px-NewTux.svg.png">
                  <img src="https://cdn-icons-png.flaticon.com/512/1024/1024759.png" alt="Mountains" width="600" height="400">
@@ -123,16 +130,10 @@
                <div class="desc">Lorem ipsum Lorem ipsumLorem ipsumdolor sit </div>
              </div>
              <div class="gallery">
-               <a target="_blank" href="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b0/NewTux.svg/1200px-NewTux.svg.png">
-                 <img src="https://cdn-icons-png.flaticon.com/512/1024/1024759.png" alt="Mountains" width="600" height="400">
-               </a>
-               <div class="desc">Lorem ipsum dolor Lorem ipsumsit </div>
-             </div>
-             <div class="gallery">
               <a target="_blank" href="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b0/NewTux.svg/1200px-NewTux.svg.png">
                 <img src="https://cdn-icons-png.flaticon.com/512/1024/1024759.png" alt="Mountains" width="600" height="400">
               </a>
-              <div class="desc">Lorem ipsumLorem ipsum dolor sit </div>
+              <div class="desc">Lorem ipsum dolor sitLorem ipsumLorem ipsum </div>
             </div>
            </div>
        </div>
@@ -190,6 +191,12 @@
         <p>Email для связи с нами </p>
         <p> <a href="#">info@prolife.ru</a></p>
         <b class="button" href="#" class="b">КАК ДОБРАТЬСЯ</b>
+        <div class="icons">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/2/21/VK.com-logo.svg" width="600" height="400">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Twitter-logo.svg?uselang=ru" width="600" height="400">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Facebook_Logo_%282019%29.png/1200px-Facebook_Logo_%282019%29.png" width="600" height="400">
+      </div>
+      </div>
       </div>
     </div>
 </body>
